--- a/bootstrap中文网/index.html
+++ b/bootstrap中文网/index.html
@@ -59,5 +59,25 @@
 		</div>
 	</div>
 </div>
+<div class="projects">
+	<div class="container">
+		<div class="projects-header page-header">
+		<h1 class="projects-header-h1">Bootstrap相关优质项目推荐</h1>
+		<p class="projects-header-p">这些项目或者是对Bootstrap进行了有益的补充，或者是基于Bootstrap开发的</p>
+		</div>
+		<div class="projects-row">
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/codeguide.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Bootstrap</a>by @mdo</h3>
+						<p>Bootstrap编码规范：编写灵活、稳定、高质量的HTML和CSS代码的规范。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+</div>
 </body>
 </html>
