--- a/bootstrap中文网/index.html
+++ b/bootstrap中文网/index.html
@@ -79,34 +79,34 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/codeguide.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/jqueryapi.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/">Bootstrap编码规范</a><br />
-							<small>by @mdo</small>
+						<h3><a href="http://codeguide.bootcss.com/">jQuery API</a><br />
+							<small>中文手册</small>
 						</h3>
-						<p>Bootstrap编码规范：编写灵活、稳定、高质量的HTML和CSS代码的规范。</p>
+						<p>根据最新的jQuery 1.11.x 和 2.1.x 版本翻译的jQuery API中文文档/手册</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/codeguide.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/opencdn.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/">Bootstrap编码规范</a><br />
-							<small>by @mdo</small>
+						<h3><a href="http://codeguide.bootcss.com/">Open CDN</a><br />
+							<small>开放CDN服务</small>
 						</h3>
-						<p>Bootstrap编码规范：编写灵活、稳定、高质量的HTML和CSS代码的规范。</p>
+						<p>Bootstrap中文网联合又拍云存储共同推出了开放CDN服务，我们对广泛的前端开源库提供了稳定的存储和宽带的支持，例如Bootstrap、jQuery等。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/codeguide.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/expo.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/">Bootstrap编码规范</a><br />
-							<small>by @mdo</small>
+						<h3><a href="http://codeguide.bootcss.com/">优站精选</a><br />
+							<small>Bootstrap网站实例</small>
 						</h3>
-						<p>Bootstrap编码规范：编写灵活、稳定、高质量的HTML和CSS代码的规范。</p>
+						<p>Bootstrap优站精选频道收集了众多基于Bootstrap构建、设计精美的、有创意的网站。</p>
 					</div>
 				</div>
 			</div>
