--- a/bootstrap中文网/index.html
+++ b/bootstrap中文网/index.html
@@ -111,6 +111,423 @@
 				</div>
 			</div>
 			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/gulpjs.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">gulp.js</a><br />
+							<small>基于流的自动化构建工具。</small>
+						</h3>
+						<p>gulp.js-基于流的（stream）的自动化构建工具。Grunt采用配置文件的方式执行任务，而Gulp一切都通过代码实现。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/lesscss.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Less</a><br />
+							<small>一种动态样式语言</small>
+						</h3>
+						<p>Less为css赋予了动态语言的特性，如变量、继承、运算、函数、Less既可以在客户端上运行（支持IE 6+、Webkit、Firefox），也可以借助Node.js或者Rhino在服务端运行。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/gruntjs.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Grunt</a><br />
+							<small>项目构建工具</small>
+						</h3>
+						<p>Grunt是基于Node.js的项目构建工具。它可以自动运行你所设定的任务。Grunt拥有数量庞大的插件，几乎任何你所要做的事情都可以用Grunt实现。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/underscore.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Underscore.js</a><br />
+							<small>Javascript工具库</small>
+						</h3>
+						<p>Underscore.js是一个JavaScript工具库，它提供了一整套函数式编程的实用功能，弥补了JQuery没有实现的功能，同时又是Backbone必不可少的部分。</p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/buttons.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Buttons</a><br />
+							<small>CSS按钮样式库</small>
+						</h3>
+						<p>Buttons是一个基于Sass和Compass构建的CSS按钮（button）样式库，图标采用的是<a href="http://www.bootcss.com/p/font-awesome/">Font Awesome</a>，可以和Bootstrap融合使用。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/stickup.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">stickUp</a><br />
+							<small>让页面元素“固定”位置</small>
+						</h3>
+						<p>stickUp能让页面目标元素“固定”在浏览器窗口的顶部，即使页面在滚动，目标元素仍然能出现在设定的位置。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/responsive-nav.js.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Responsive Nav</a><br />
+							<small>响应式导航</small>
+						</h3>
+						<p>响应式导航（Responsive Nav）是一个很小的JS插件，压缩之后仅有1.7kb，能帮你创建针对小屏幕的可切换式导航</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/unslider.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Unslider</a><br />
+							<small>jQuery轮播插件</small>
+						</h3>
+						<p>Unslider--一个超小的jQuery轮播（slider）插件。支持主流浏览器、键盘导航、自动调整高度和响应式布局。</p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/flat-ui.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Flat UI</a><br />
+							<small>Metro风格的Bootstrap</small>
+						</h3>
+						<p>Flat UI是基于Bootstrap做的Metro化改造，由<a href="http://designmodo.com/">Designmode</a>提供。Flat UI包含了很多Bootstrap提供的组件，但是外观更加漂亮。在此强烈推荐。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/layoutit.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">LayoutIt！</a><br />
+							<small>Bootstrap可视化布局</small>
+						</h3>
+						<p>LayoutIt！可拖放排序在线编辑的Bootstrap可视化布局系统。由<a href="https://github.com/dodgepudding">4wer</a>同学汉化整理。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/bootstrap-switch.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Bootstrap Switch</a><br />
+							<small>Bootstrap开发组件</small>
+						</h3>
+						<p>Bootstrap Switch是对Bootstrap控件的扩充。基于选HTML中基本的选择框控件实现只有开和关两种状态的单选按钮。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/sco.js.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Sco.js</a><br />
+							<small>Bootstrap组件增强版</small>
+						</h3>
+						<p>由于大部分的Bootstrap js插件是无法扩展的，因此才有了sco.js，它是对Bootstrap中js插件的增强实现。</p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/icheck.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">ICheck</a><br />
+							<small>增强复选框和单选按钮</small>
+						</h3>
+						<p>iCheck让不同浏览器下的复选框（checkboxes）和单选按钮（radio button）更美观、功能更强。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/bootstrap-wysiwyg.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">bootstrap-wysiwyg</a><br />
+							<small>为Bootstrap定制的可视化编辑器</small>
+						</h3>
+						<p>Bootstrap-wysiwyg是一个jQuery Bootstrap插件（5KB，<200行代码）可以将任何一个DIV转变成一个WYSIWYG富文本编辑器。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/chart.js.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Chart.js</a><br />
+							<small>精巧的JS图表绘制工具库</small>
+						</h3>
+						<p>Chart.js是一个简单、面向对象、为设计者和开发者准备的图表绘制工具库。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/preboot.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/">Preboot</a><br />
+							<small>Bootstrap之前世</small>
+						</h3>
+						<p>Preboot是一组用LESS语法书写的混合（mixin）和变量（variable）的集合。目的是辅助用户书写更优美的CSS。Bootstrap的前身就是Preboot。</p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
+				<div class="col-sm-6 col-md-4 col-lg-3">
+				<div class="thumbnail">
+					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<div class="caption">
+						<h3><a href="http://codeguide.bootcss.com/"></a><br />
+							<small></small>
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
 		</div>
 	</div>
 	
