--- a/bootstrap中文网/index.html
+++ b/bootstrap中文网/index.html
@@ -293,237 +293,192 @@
 			<div class="clear"></div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/jquery.pin.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">jQuery.Pin</a><br />
+							<small>固定页面元素的jQuery插件</small>
 						</h3>
-						<p></p>
+						<p>jQuery.Pin能将任意页面元素“钉”在某个容器顶部，而且在尺寸小的屏幕上能够自动禁用这种效果。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/bsie.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Bsie</a><br />
+							<small>Bootstrap IE6兼容方案</small>
 						</h3>
-						<p></p>
+						<p>Bsie弥补了Bootstrap对IE６　的不兼容。目前，ｂｓｉｅ能在IE６上支持大部分bootstrap的特性，可惜，还有一些实在无法支持．．．</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/messenger.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Messenger</a><br />
+							<small>非常酷的弹框（Alert）组件</small>
 						</h3>
-						<p></p>
+						<p>Messenger是一个非常酷的弹框（alert）组件，当然，单独使用效果也是非常棒。messengerz自带4套皮肤。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/bootstrap-datetimepicker.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">DateTime Picker</a><br />
+							<small>日期时间选择器</small>
 						</h3>
-						<p></p>
+						<p>Bootstrap日期时间选择器（bootstrap Date Time Picker）是一个Bootstrap组件，能够简化页面上日期/时间的输入。</p>
 					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/jquery-ui-bootstrap.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">jQuery UI Bootstrap</a><br />
+							<small>用Bootstrap美化jQuery UI</small>
 						</h3>
-						<p></p>
+						<p>这套工具让你在使用jQuery UI控件是也能充分利用Bootstrap的样式，而且不会出现样式不用亦的现象，Bootstrap和jQuery UI可以完美融合在一起了！</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/google-bootstrap.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Google Bootstrap</a><br />
+							<small>Google风格的Bootstrap</small>
 						</h3>
-						<p></p>
+						<p>Google的UI素来以简洁著称，现在Bootstrap也来Google Style一把，喜欢Google的就来试试这套Google Bootstrap吧！</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/metro-ui-css.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Metro Ui CSS</a><br />
+							<small>Bootstrap与Metro融合</small>
 						</h3>
-						<p></p>
+						<p>Metro UI CSS是一套用来创建类似于windows 8 Metro UI风格网站的样式。现在，Metro UI仙姑在Bootstrap的基础上被开发成一个独立的解决方案。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/font-awesome.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Font Awesome</a><br />
+							<small>Bootstrap专用图标字体</small>
 						</h3>
-						<p></p>
+						<p>Font Awesome中包含的所有图标都是矢量的，也就可以任意缩放，避免了一个图标做多种尺寸的麻烦。CSS对字体可以设置的样式也同样能够运用到这些图标上了。</p>
 					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/simpleicons.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Simple Icons</a><br />
+							<small>Icon汇</small>
 						</h3>
-						<p></p>
+						<p>Simple Icons--Icon汇。手机众多网站的Logo，并气功高质量/不同尺寸的png格式图片给广大网友，所有Icon版权归其所属公司。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/bootstrap-form-builder.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Bootstrap Form Builder</a><br />
+							<small>在线表单构造器</small>
 						</h3>
-						<p></p>
+						<p>Bootstrap 在线表单构造器能够以鼠标拖拽的方式迅速生成一个基于Bootstrap的完整表单，减轻了各位码农手写HTML代码的劳动，而且不会</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/h5bp.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Html 5 Boilerplate</a><br />
+							<small>专业的前端模板</small>
 						</h3>
-						<p></p>
+						<p>HTML5 Boilerplate 是一套专业的前端模版，用以开发快速、健壮、适应性强的app或网站。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/websafecolors.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Web Safe Colors</a><br />
+							<small>Web安全色</small>
 						</h3>
-						<p></p>
+						<p>本表中列出的是WEB设计、开发中常用安全色。列于此是为了方便大家参考。</p>
 					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/bootstrap-docs.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Bootstrap Docs</a><br />
+							<small>Bootstrap文档全集</small>
 						</h3>
-						<p></p>
+						<p>这里收集了Bootstrap从V1.0.0版本到现在，整个文档的历史。Bootstrap本身就是一个传奇，而这些文档就是传奇的见证！</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/git-guide.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Git Guide</a><br />
+							<small>Git简易指南</small>
 						</h3>
-						<p></p>
+						<p>- 帮助你开始使用 git 的简易指南，木有高深内容，;)。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/grumblejs.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Grumble.js</a><br />
+							<small>气泡形状的提示（Tooltip）控件</small>
 						</h3>
-						<p></p>
+						<p>一个气泡形状的提示（Tooltip）控件，可以在其围绕的元素周围做360度任意定位。</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/cikonss.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">CIKONSS</a><br />
+							<small>纯css实现的Icon</small>
 						</h3>
-						<p></p>
+						<p>Cikonss是纯CSS实现的响应式Icon，兼容IE8+。</p>
 					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
+					<a href="http://codeguide.bootstrap.com"><img src="images/headroom.png"></a>
 					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
+						<h3><a href="http://codeguide.bootcss.com/">Headroom.js</a><br />
+							<small>隐藏或展示页面元素</small>
 						</h3>
-						<p></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3">
-				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/p.png"></a>
-					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
-						</h3>
-						<p></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3">
-				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
-					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
-						</h3>
-						<p></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3">
-				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
-					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
-						</h3>
-						<p></p>
-					</div>
-				</div>
-			</div>
-			<div class="clear"></div>
-				<div class="col-sm-6 col-md-4 col-lg-3">
-				<div class="thumbnail">
-					<a href="http://codeguide.bootstrap.com"><img src="images/.png"></a>
-					<div class="caption">
-						<h3><a href="http://codeguide.bootcss.com/"></a><br />
-							<small></small>
-						</h3>
-						<p></p>
+						<p>Headroom.js 是一个轻量级、纯 JavaScript 组件，用来隐藏或展现页面上的元素，为你的页面留下更多展示内容的空间。</p>
 					</div>
 				</div>
 			</div>
