--- a/bootstrap中文网/index.html
+++ b/bootstrap中文网/index.html
@@ -487,5 +487,46 @@
 	</div>
 	
 </div>
+<div class="footer">
+	<div class="container">
+		<div class="footer-top">
+			<div class="footer-left">
+				<img src="images/logo.png">
+				<p>本网站所列开源项目的中文版文档全部由<a href="">Bootstrap中文网</a> 成员翻译整理，并全部遵循CC BY 3.0协议发布。</p>
+			</div>
+		<div class="footer-right">
+			<dl>
+				<dt>关于</dt>
+				<dd><a href="">关于我们</a></dd>
+				<dd><a href="">广告合作</a></dd>
+				<dd><a href="">友情链接</a></dd>
+				<dd><a href="">招聘</a></dd>
+			</dl>
+			<dl>
+				<dt>联系方式</dt>
+				<dd><a href="">新浪微博</a></dd>
+				<dd><a href="">电子邮件</a></dd>
+			</dl>
+			<dl>
+				<dt>旗下网站</dt>
+				<dd><a href="">Laravel中文网</a></dd>
+				<dd><a href="">Ghost中国</a></dd>
+			</dl>
+			<dl>
+				<dt>赞助商</dt>
+				<dd><a href="">UCloud</a></dd>
+				<dd><a href="">又拍云</a></dd>
+			</dl>
+			<div class="clear"></div>	
+			
+		</div>
+		<div class="clear"></div>
+		</div>
+		<div class="footer-bottom">
+			<p><a href="">京ICP备11008151号</a>  |  京公网安备11010802014853</p>
+		</div>
+	</div>
+	
+</div>
 </body>
 </html>
