--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Wedding store</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="fonts/">
 </head>
 <body>
 <div id="header">
@@ -39,6 +40,21 @@
 			</ul>
 		</div>
 		<div class="wedding-right"></div>
+		<div class="clear"></div>
+	</div>
+</div>
+<div class="banner">
+	<div>
+		<img class="banner-img" src="images/ban2.jpg">
+	</div>
+</div>
+<div class="welcome">
+	<div class="container">
+		<div class="welcome-left">Welcome to our site</div>
+		<div class="welcome-right">
+			<h5>Proin ornare massa eu enim pretium efficitur. </h5>
+			<p>Etiam fermentum consectetur nulla, sit amet dapibus orci sollicitudin vel. Nulla consequat turpis in molestie fermentum. In ornare, tellus non interdum ultricies, elit ex lobortis ex, aliquet accumsan arcu tortor in leo. Nullam molestie elit enim. Donec ac aliquam quam, ac iaculis diam. Donec finibus scelerisque erat, non convallis felis commodo ac.</p>
+		</div>
 		<div class="clear"></div>
 	</div>
 </div>
