--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Wedding store</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="fonts/">
+	<link rel="stylesheet" href="fonts/glyphicons-halflings-regular.woff">
 </head>
 <body>
 <div id="header">
@@ -52,11 +52,155 @@
 	<div class="container">
 		<div class="welcome-left">Welcome to our site</div>
 		<div class="welcome-right">
-			<h5>Proin ornare massa eu enim pretium efficitur. </h5>
+			<h2>Proin ornare massa eu enim pretium efficitur. </h2>
 			<p>Etiam fermentum consectetur nulla, sit amet dapibus orci sollicitudin vel. Nulla consequat turpis in molestie fermentum. In ornare, tellus non interdum ultricies, elit ex lobortis ex, aliquet accumsan arcu tortor in leo. Nullam molestie elit enim. Donec ac aliquam quam, ac iaculis diam. Donec finibus scelerisque erat, non convallis felis commodo ac.</p>
 		</div>
 		<div class="clear"></div>
 	</div>
+</div>
+<div class="pictures">
+	<div class="container">
+		<div class="picture-left pic-1">
+			<div class="pic-left">
+				<figure>
+					<img src="images/b1.jpg">
+					<p>Wedding Dresses</p>
+				</figure>
+				<figure>
+					<img src="images/b2.jpg">
+					<p>BridalParty & Dresses</p>
+				</figure>
+			</div>
+		</div>
+		<div class="picture-middle pic-1">
+			<div class="pic-middle">
+				<img src="images/brid.jpg">
+				<p>Bridesmade Dresses</p>
+			</div>
+			
+		</div>
+		<div class="picture-right pic-1">
+			<div class="pic-right">
+				<figure>
+					<img src="images/b3.jpg">
+					<p>Wedding</p>
+				</figure>
+			<figure>
+				<img src="images/b4.jpg">
+				<p>Most Beautiful</p>
+			</figure>
+			</div>
+		</div>
+		<div class="clear"></div>
+	</div>	
+</div>
+<div class="feature">
+	<div class="container">
+		<div class="feature-top">
+			<h2>Featured Products</h2>
+		</div>
+		<div class="feature-bottom">
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/f1.jpg">
+					<div class="arrival-info">
+						<h4>jewellerys #1</h4>
+						<p>Rs 12000</p>
+						<span class="pricl"><del>Rs 18000</del></span>
+						<span class="disc">[12% OFF]</span>
+					</div>
+				</div>
+			</a>
+			</div>
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/f2.jpg">
+					<div class="arrival-info">
+					<h4>jewellerys #1</h4>
+					<p>Rs 68000</p>
+					<span class="pricl"><del>Rs 70000</del></span>
+					<span class="disc">[10% OFF]</span>
+					</div>
+				</div>				
+			</a>
+			</div>
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/f3.jpg">
+					<div class="arrival-info">
+					<h4>wedding ceramic pot</h4>
+					<p>Rs 1200</p>
+					<span class="pricl"><del>Rs 2000</del></span>
+					<span class="disc">[10% OFF]</span>
+					</div>
+				</div>
+				
+			</a>
+			</div>
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/f4.jpg">
+					<div class="arrival-info">
+					<h4>jewellerys #1</h4>
+					<p>Rs 12000</p>
+					<span class="pricl"><del>Rs 18000</del></span>
+					<span class="disc">[12% OFF]</span>
+					</div>
+				</div>		
+			</a>
+			</div>
+			<div class="clear"></div>
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/p7.jpg">
+					<div class="arrival-info">
+					<h4>jewellerys #1</h4>
+					<p>Rs 12000</p>
+					<span class="pricl"><del>Rs 18000</del></span>
+					<span class="disc">[12% OFF]</span>
+					</div>
+				</div>
+			</a>
+			</div>
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/p11.jpg">
+					<div class="arrival-info">
+					<h4>jewellerys #1</h4>
+					<p>Rs 12000</p>
+					<span class="pricl"><del>Rs 18000</del></span>
+					<span class="disc">[12% OFF]</span>
+					</div>
+				</div>
+			</a>
+			</div>
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/p12.jpg">
+					<div class="arrival-info">
+					<h4>jewellerys #1</h4>
+					<p>Rs 12000</p>
+					<span class="pricl"><del>Rs 18000</del></span>
+					<span class="disc">[12% OFF]</span>
+					</div>
+				</div>	
+			</a>
+			</div>
+			<div class="fea-1"><a href="">
+				<div class="fea-2">
+					<img src="images/f2.jpg">
+					<div class="arrival-info">
+					<h4>jewellerys #1</h4>
+					<p>Rs 12000</p>
+					<span class="pricl"><del>Rs 18000</del></span>
+					<span class="disc">[12% OFF]</span>
+					</div>
+				</div>	
+			</a>
+			</div>
+			<div class="clear"></div>
+		</div>
+	</div>	
 </div>
 </body>
 </html>
