--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -34,7 +34,42 @@
 		<div class="wedding-middle">
 			<ul>
 				<li><a href="#" class="li-home">HOME</a></li>
-				<li><a href="#" class="li-another">WDDDING</a></li>
+				<li><a href="#" class="li-another">WDDDING</a>
+					<div class="row">
+							<dl>
+								<dt>Shop</dt>
+								<dd><a href="product.html">New Arrivals</a></dd>
+								<dd><a href="product.html">Men</a></dd>
+								<dd><a href="product.html">Woman</a></dd>
+								<dd><a href="product.html">Accessoires</a></dd>
+								<dd><a href="product.html">Kids</a></dd>
+								<dd><a href="product.html">Login</a></dd>
+								<dd><a href="product.html">Brands</a></dd>
+								<dd><a href="product.html">My Shopping Bag</a></dd>
+							</dl>
+							<dl>
+								<dt>Style Zone</dt>
+								<dd><a href="product.html">Men</a></dd>
+								<dd><a href="product.html">Woman</a></dd>
+								<dd><a href="product.html">Brands</a></dd>
+								<dd><a href="product.html">Kids</a></dd>
+								<dd><a href="product.html">Accessories</a></dd>
+								<dd><a href="product.html">Style Videos</a></dd>
+							</dl>
+							<dl>
+								<dt>Popular Brands</dt>
+								<dd><a href="product.html">Levis</a></dd>
+								<dd><a href="product.html">Persol</a></dd>
+								<dd><a href="product.html">Nike</a></dd>
+								<dd><a href="product.html">Edwin</a></dd>
+								<dd><a href="product.html">New Balance</a></dd>
+								<dd><a href="product.html">Jack & Jones</a></dd>
+								<dd><a href="product.html">Paul Smith</a></dd>
+								<dd><a href="product.html">Ray-Ban</a></dd>
+								<dd><a href="product.html">Wood Wood</a></dd>
+							</dl>
+					</div>
+				</li>
 				<li><a href="#" class="li-another">BRIDE STYLE</a></li>
 				<li><a href="typo.html" class="li-another">TYPO</a></li>
 				<li><a href="contact.html" class="li-another">CONTACT</a></li>
