--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="fonts/JosefinSans-Regular.ttf">
+	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="js/row.js"></script>
+	<script>$(document).ready(function(){$(".row").row()})</script>
 </head>
 <body>
 <div id="header">
